<resources>
    <string name="app_name">Never Lost</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_confirm_login">Confirm\nLogin</string>
    <string name="button_cancel_login">Cancel\nLogin</string>
    <string name="button_confirm_signup">Confirm\nSign Up</string>
    <string name="button_cancel_signup">Cancel\nSign Up</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="title_activity_new_provider">NewProviderActivity</string>
</resources>
