<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/tv_app_name2"
            fontPath="fonts/moon.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/white"/>

    <EditText
            android:id="@+id/edit_name"
            fontPath="fonts/Panton-SemiBoldItalic.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/edit_username"
            android:textColor="@android:color/white"
            android:textColorHint="#55FFFFFF"
            android:textSize="20sp"
            android:maxLines="1"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"/>

    <EditText
            android:id="@+id/edit_pass"
            fontPath="fonts/Panton-SemiBoldItalic.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="#55FFFFFF"
            android:textSize="20sp"
            android:maxLines="1"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"/>
</merge>